syntax = "proto3";

package pb;

import "event.proto";

option go_package = "github.com/manumura/go-auth-rbac-starter/pb";

service UserEvent {
    rpc GetUserEvents(UserEventsRequest) returns (stream UserEventsResponse) {}
}

message UserEventsRequest {}

message UserEventsResponse {
    Event event = 1;
}
